umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_methane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Td
order: 24
equivalence_sets:
  - - H(0)
    - C(1)
    - H(2)
    - H(3)
  - - H(4)
