umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_mg_h.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Th
order: 24
equivalence_sets:
  - - Mg(0)
  - - O(1)
    - O(2)
    - O(3)
    - O(4)
    - O(5)
    - O(6)
  - - H(7)
    - H(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
    - H(17)
    - H(18)
