umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_neopentane_rotated.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: T
order: 12
equivalence_sets:
  - - C(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
  - - H(5)
    - H(6)
    - H(7)
    - H(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
