umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_nickeltetracarbonyl.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Td
order: 24
equivalence_sets:
  - - Ni(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
  - - O(5)
    - O(6)
    - O(7)
    - O(8)
