umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_octamethylsilsesquioxane_rotated.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: O
order: 24
equivalence_sets:
  - - Si(0)
    - Si(1)
    - Si(2)
    - Si(3)
    - Si(4)
    - Si(5)
    - Si(6)
    - Si(7)
  - - O(8)
    - O(9)
    - O(10)
    - O(11)
    - O(12)
    - O(13)
    - O(14)
    - O(15)
    - O(16)
    - O(17)
    - O(18)
    - O(19)
  - - C(20)
    - C(21)
    - C(22)
    - C(23)
    - C(24)
    - C(25)
    - C(26)
    - C(27)
  - - H(28)
    - H(29)
    - H(30)
    - H(31)
    - H(32)
    - H(33)
    - H(34)
    - H(35)
    - H(36)
    - H(37)
    - H(38)
    - H(39)
    - H(40)
    - H(41)
    - H(42)
    - H(43)
    - H(44)
    - H(45)
    - H(46)
    - H(47)
    - H(48)
    - H(49)
    - H(50)
    - H(51)
