umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_oxalic_acid.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2h
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
  - - O(2)
    - O(3)
  - - O(4)
    - O(5)
  - - H(6)
    - H(7)
