umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_pagodane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2h
order: 8
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
  - - C(4)
    - C(5)
    - C(6)
    - C(7)
    - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - C(12)
    - C(13)
    - C(14)
    - C(15)
  - - H(16)
    - H(17)
    - H(18)
    - H(19)
  - - H(20)
    - H(21)
    - H(22)
    - H(23)
  - - C(24)
    - C(25)
    - C(26)
    - C(27)
  - - H(28)
    - H(29)
    - H(30)
    - H(31)
  - - H(32)
    - H(33)
    - H(34)
    - H(35)
    - H(36)
    - H(37)
    - H(38)
    - H(39)
