umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_pentaborane_9.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C4v
order: 8
equivalence_sets:
  - - B(0)
  - - H(1)
  - - B(2)
    - B(3)
    - B(4)
    - B(5)
  - - H(6)
    - H(7)
    - H(8)
    - H(9)
  - - H(10)
    - H(11)
    - H(12)
    - H(13)
